pattern/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\DELL\Documents\pattern
-d
C:\Users\DELL\Documents\pattern\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\DELL\Documents\pattern\big.java
<---- end of javadoc command ---->
Loading source file C:\Users\DELL\Documents\pattern\big.java...
C:\Users\DELL\Documents\pattern\big.java:28: error: hexadecimal numbers must contain at least one hexadecimal digit
        for(int x=0x;<n.length;x++)
                  ^
C:\Users\DELL\Documents\pattern\big.java:28: error: > expected
        for(int x=0x;<n.length;x++)
                              ^
C:\Users\DELL\Documents\pattern\big.java:28: error: ')' expected
        for(int x=0x;<n.length;x++)
                               ^
C:\Users\DELL\Documents\pattern\big.java:28: error: illegal start of expression
        for(int x=0x;<n.length;x++)
                                  ^
C:\Users\DELL\Documents\pattern\big.java:31: error: reached end of file while parsing
        }
         ^
5 errors
